--- a/styles/header.scss
+++ b/styles/header.scss
@@ -7,7 +7,7 @@
 // header
 header {
   width: 100%;
-  height: 260px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -19,20 +19,22 @@ header {
   z-index: 1;
   .header_event {
     width: 100%;
-    height: 60px;
+    height: 50px;
     background: map-get($map: $color, $key: main-01);
     color: map-get($map: $color, $key: light);
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: map-get($map: $font, $key: pretendard);
-    font-size: 2rem;
+    font-size: 1.4rem;
     .fa-chevron-right {
+      margin-left: 10px;
+      font-size: 1.4rem;
       cursor: pointer;
     }
   }
   .header_inner {
-    width: 1650px;
+    width: 1400px;
     height: 200px;
     display: flex;
     justify-content: space-between;
@@ -47,11 +49,15 @@ header {
       bottom: 20px;
       ul {
         display: flex;
-        gap: 60px;
+        gap: 40px;
         li {
           font-family: map-get($map: $font, $key: pretendard);
-          font-size: 2.8rem;
+          font-size: 2.2rem;
           cursor: pointer;
+          transition: color 0.4s;
+          &:hover {
+            color: map-get($map: $color, $key: main-01);
+          }
         }
       }
     }
@@ -59,18 +65,23 @@ header {
       display: flex;
       flex-direction: column;
       align-items: end;
-      gap: 95px;
+      gap: 65px;
       position: absolute;
       right: 0;
+      bottom: 20px;
       .inner_right_top {
         ul {
           display: flex;
           align-items: center;
-          gap: 10px;
+          gap: 14px;
           font-family: map-get($map: $font, $key: pretendard);
-          font-size: 1.8rem;
+          font-size: 1.6rem;
           li {
             cursor: pointer;
+            transition: color 0.4s;
+            &:hover {
+              color: map-get($map: $color, $key: main-01);
+            }
           }
         }
       }
@@ -109,8 +120,8 @@ header {
           position: relative;
           .fa-cart-shopping {
             width: 40px;
-            height: 32px;
-            font-size: 32px;
+            height: 34px;
+            font-size: 28px;
             cursor: pointer;
           }
           p {
