--- a/detail/styles/detail.css
+++ b/detail/styles/detail.css
@@ -34,7 +34,7 @@ a {
 
 header {
   width: 100%;
-  height: 260px;
+  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -47,20 +47,22 @@ header {
 }
 header .header_event {
   width: 100%;
-  height: 60px;
+  height: 50px;
   background: #f37100;
   color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
   font-family: pretendard;
-  font-size: 2rem;
+  font-size: 1.4rem;
 }
 header .header_event .fa-chevron-right {
+  margin-left: 10px;
+  font-size: 1.4rem;
   cursor: pointer;
 }
 header .header_inner {
-  width: 1650px;
+  width: 1400px;
   height: 200px;
   display: flex;
   justify-content: space-between;
@@ -77,30 +79,39 @@ header .header_inner .header_inner_left {
 }
 header .header_inner .header_inner_left ul {
   display: flex;
-  gap: 60px;
+  gap: 40px;
 }
 header .header_inner .header_inner_left ul li {
   font-family: pretendard;
-  font-size: 2.8rem;
+  font-size: 2.2rem;
   cursor: pointer;
+  transition: color 0.4s;
+}
+header .header_inner .header_inner_left ul li:hover {
+  color: #f37100;
 }
 header .header_inner .header_inner_right {
   display: flex;
   flex-direction: column;
   align-items: end;
-  gap: 95px;
+  gap: 65px;
   position: absolute;
   right: 0;
+  bottom: 20px;
 }
 header .header_inner .header_inner_right .inner_right_top ul {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 14px;
   font-family: pretendard;
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 header .header_inner .header_inner_right .inner_right_top ul li {
   cursor: pointer;
+  transition: color 0.4s;
+}
+header .header_inner .header_inner_right .inner_right_top ul li:hover {
+  color: #f37100;
 }
 header .header_inner .header_inner_right .inner_right_bottom {
   display: flex;
@@ -144,8 +155,8 @@ header .header_inner .header_inner_right .inner_right_bottom .basket {
 }
 header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
   width: 40px;
-  height: 32px;
-  font-size: 32px;
+  height: 34px;
+  font-size: 28px;
   cursor: pointer;
 }
 header .header_inner .header_inner_right .inner_right_bottom .basket p {
@@ -189,12 +200,12 @@ a {
 
 footer {
   width: 100%;
-  height: 300px;
+  height: 190px;
   display: flex;
   justify-content: center;
   align-items: center;
   background: #f5f5f5;
-  color: #858585;
+  color: #999;
 }
 footer .footer_inner {
   width: 1050px;
@@ -205,12 +216,12 @@ footer .footer_inner {
 footer .footer_inner .footer_inner_left {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 30px;
+  align-items: start;
+  gap: 10px;
 }
 footer .footer_inner .footer_inner_left img {
-  width: 170px;
-  height: 80px;
+  width: 140px;
+  height: 66px;
 }
 footer .footer_inner .footer_inner_left p {
   font-family: pretendard;
@@ -223,20 +234,20 @@ footer .footer_inner .footer_inner_center {
 footer .footer_inner .footer_inner_center ul {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 9px;
 }
 footer .footer_inner .footer_inner_center ul li {
   font-family: pretendard;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 footer .footer_inner .footer_inner_center ul li:last-child {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: bold;
 }
 footer .footer_inner .footer_inner_right {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 8px;
   font-family: pretendard;
 }
 footer .footer_inner .footer_inner_right .inner_right_top {
@@ -244,16 +255,16 @@ footer .footer_inner .footer_inner_right .inner_right_top {
   flex-direction: column;
 }
 footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(1) {
-  font-size: 2.2rem;
+  font-size: 1.6rem;
   font-weight: bold;
 }
 footer .footer_inner .footer_inner_right .inner_right_top ul li:nth-child(2) {
-  font-size: 3.6rem;
+  font-size: 2.6rem;
   font-weight: bold;
 }
 footer .footer_inner .footer_inner_right .inner_right_bottom {
   display: flex;
-  gap: 5px;
+  gap: 10px;
 }
 footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
   display: flex;
@@ -261,15 +272,17 @@ footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left 
   gap: 5px;
 }
 footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
-  font-size: 1.2rem;
+  font-size: 1rem;
+}
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
+  font-size: 1.4rem;
+  line-height: 150%;
 }
 
-/* Product Thumbnail */
-/* Review Content */
 html {
   font-size: 62.5%;
 }
@@ -277,64 +290,65 @@ html {
 body {
   font-size: 1.6rem;
   font-family: pretendard;
+  width: 100%;
+  margin: 50px auto;
 }
 
+/* Product Thumbnail */
+/* Review Content */
 /* main */
 .detail_container {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  margin: 60px auto 100px auto;
 }
 
 /* hr */
 .detail_line {
-  width: 1050px;
-  height: 2px;
+  width: 100%;
+  max-width: 1050px;
+  height: 1px;
   background-color: #f37100;
   border: none;
-  margin: 0 auto;
-}
-
-/* 5 Section */
-.detail_info,
-.detail_review,
-.detail_product,
-.detail_faq,
-.detail_policy {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 40px;
 }
 
 /* info */
 .detail_info {
   width: 100%;
-  height: 100%;
+  max-width: 1050px;
+  height: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
-  gap: 50px;
+  padding: 40px 50px;
 }
-.detail_info img {
+.detail_info .info_img {
+  width: 100%;
+  max-width: 50%;
+  overflow: hidden;
+}
+.detail_info .info_img img {
   border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 .detail_info .img_info {
+  width: 50%;
+  max-width: 50%;
+  padding-left: 20px;
   display: flex;
   flex-direction: column;
 }
 .detail_info .info_title {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .detail_info .info_title h1 {
   font-size: 3rem;
+  line-height: 140%;
 }
 .detail_info .info_title p {
   font-size: 2rem;
@@ -361,7 +375,7 @@ body {
   margin-bottom: 10px;
 }
 .detail_info .info_review {
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .detail_info .info_review .fa-star {
   font-size: 2rem;
@@ -424,48 +438,47 @@ body {
   font-size: 1.2rem;
 }
 .detail_info .info_purchase {
-  margin-bottom: 10px;
+  width: 100%;
 }
 .detail_info .info_purchase button {
+  width: 100%;
   border: none;
   border-radius: 10px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: bold;
   color: #fff;
   background: #ff9900;
-  width: 440px;
-  height: 60px;
-  margin-top: 20px;
+  height: 40px;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 
 /* review */
 .detail_review {
-  width: 1050px;
-  height: 100%;
-  margin: 0 auto;
+  max-width: 1050px;
+  height: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 30px;
+  padding: 40px 50px;
+  gap: 50px;
 }
 .detail_review .review_text {
+  width: 100%;
   text-align: left;
 }
 .detail_review .review_text .text_review {
   font-size: 3rem;
   font-weight: 700;
-  word-wrap: break-word;
 }
 .detail_review .review_text .text_few {
   color: #f37100;
   font-size: 2rem;
   font-weight: 700;
-  word-wrap: break-word;
 }
 .detail_review .review_star {
-  width: 1050px;
-  height: 100%;
+  width: 100%;
+  height: auto;
   margin: 50px auto;
   padding: 20px;
   background: #fffaf1;
@@ -487,8 +500,8 @@ body {
   color: #f37100;
 }
 .detail_review .review_member {
-  width: 1050px;
-  height: 100%;
+  width: 100%;
+  height: auto;
   margin: 40px auto;
   display: flex;
   justify-content: center;
@@ -497,6 +510,7 @@ body {
 }
 .detail_review .review_member > div:first-child {
   cursor: pointer;
+  width: 50%;
 }
 .detail_review .review_member > div:first-child p {
   font-size: 2rem;
@@ -508,22 +522,28 @@ body {
   margin: 20px auto;
   gap: 20px;
   display: flex;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  overflow: hidden;
+  padding-right: 20px;
 }
 .detail_review .review_member > div:first-child .member_content img {
   border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 .detail_review .review_member > div:first-child .member_content > div {
   display: flex;
   flex-direction: column;
 }
 .detail_review .review_member > div:first-child .member_content > div p {
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #999;
-  margin: 20px 0px 0px;
+  margin: 30px 0px 0px;
 }
 .detail_review .review_member > div:last-child {
   cursor: pointer;
+  width: 50%;
 }
 .detail_review .review_member > div:last-child p {
   font-size: 1.8rem;
@@ -535,23 +555,28 @@ body {
   margin: 20px auto;
   gap: 20px;
   display: flex;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
+  overflow: hidden;
+  padding-right: 20px;
 }
 .detail_review .review_member > div:last-child .member_content img {
   border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 .detail_review .review_member > div:last-child .member_content > div {
   display: flex;
   flex-direction: column;
 }
 .detail_review .review_member > div:last-child .member_content > div p {
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: #999;
-  margin: 20px 0px 0px;
+  margin: 30px 0px 0px;
 }
 .detail_review .review_more {
   width: 100%;
-  height: 60px;
+  height: 50px;
   border: 1px solid #858585;
   border-radius: 10px;
   display: inline-flex;
@@ -560,19 +585,33 @@ body {
   background: #fff;
   gap: 10px;
   padding: 20px;
-  margin-bottom: 80px;
-  font-size: 1.8rem;
+  margin-bottom: 10px;
+  font-size: 1.6rem;
   cursor: pointer;
 }
 
 /* product */
 .detail_product {
-  width: 1050px;
-  margin: 0 auto;
+  max-width: 1050px;
+  height: auto;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 50px;
+  gap: 50px;
 }
 .detail_product .product_title {
+  width: 100%;
+  overflow: hidden;
+  padding-right: 20px;
   margin-bottom: 80px;
+}
+.detail_product .product_title img {
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
 }
 .detail_product .product_title h1 {
   font-size: 3rem;
@@ -590,34 +629,45 @@ body {
   bottom: -10px;
   left: 0;
 }
-.detail_product .product_title img {
-  border-radius: 30px;
+.detail_product .product_title .img_group {
+  display: none;
+}
+.detail_product .product_title .img_group img {
+  width: 22.3%;
 }
 .detail_product .product_thumb {
   width: 100%;
 }
 .detail_product .product_thumb .thumb_one {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
   margin-bottom: 50px;
-  gap: 50px;
+  overflow: hidden;
+  padding-right: 20px;
+}
+.detail_product .product_thumb .thumb_one img {
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 20%;
 }
 .detail_product .product_thumb .thumb_one p {
   width: 50px;
   height: 50px;
   background: #ff9900;
-  border-radius: 9999px;
+  border-radius: 50%;
   color: #fff;
   font-size: 2.5rem;
   font-weight: 700;
   margin-bottom: 20px;
   text-align: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  padding: 8px 17px;
 }
 .detail_product .product_thumb .thumb_one h4 {
   font-size: 2.6rem;
@@ -632,20 +682,16 @@ body {
   line-height: 1.3rem;
   color: #000;
 }
-.detail_product .product_thumb .thumb_one img {
-  width: 200px;
-  height: 200px;
-  border-radius: 20px;
-}
 
 /* faq */
 .detail_faq {
-  width: 100%;
-  max-width: 1050px;
-  margin: 0 auto;
+  width: 1050px;
+  height: auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 40px 50px;
   gap: 20px;
 }
 .detail_faq .faq_title {
@@ -672,6 +718,7 @@ body {
 }
 .detail_faq .faq_subTitle {
   width: 100%;
+  font-size: 1.6rem;
   text-align: left;
   color: #999;
 }
@@ -691,7 +738,7 @@ body {
   width: 60%;
 }
 .detail_faq .table_title .title_right {
-  width: 40%;
+  width: 60%;
   display: flex;
   justify-content: space-between;
 }
@@ -701,31 +748,29 @@ body {
   text-align: center;
   border-bottom: 1px solid #f37100;
 }
-.detail_faq > .faq_table th {
+.detail_faq > .faq_table .left {
   font-size: 2.2rem;
   font-weight: 600;
   color: #f37100;
   padding: 20px 50px;
-  border-top: 2px solid #f37100;
-  border-bottom: 1px solid #f37100;
 }
-.detail_faq > .faq_table th:first-child {
+.detail_faq > .faq_table .left:first-child {
   margin-right: 40px;
 }
-.detail_faq > .faq_table td {
+.detail_faq > .faq_table .left {
   font-size: 2rem;
   font-weight: 400;
   color: #000;
   padding: 30px 0;
   position: relative;
 }
-.detail_faq > .faq_table td .fa-lock {
+.detail_faq > .faq_table .left .fa-lock {
   position: absolute;
   top: 36px;
   left: 145px;
   font-size: 1.3rem;
   width: 13px;
-  height: 16px;
+  height: auto;
   color: #858585;
 }
 .detail_faq > .faq_table .left {
@@ -735,8 +780,8 @@ body {
   cursor: pointer;
 }
 .detail_faq > .faq_table .right {
-  padding-left: 30px;
-  width: 170px;
+  padding-left: 50px;
+  width: 20%;
   font-weight: 500;
 }
 .detail_faq > .faq_table .faq_date {
@@ -755,7 +800,7 @@ body {
 .detail_faq .faq_number div {
   font-size: 2.2rem;
   font-weight: 400;
-  color: black;
+  color: #000;
   cursor: pointer;
 }
 .detail_faq .faq_number div:first-child {
@@ -767,14 +812,17 @@ body {
 /* policy */
 .detail_policy {
   width: 100%;
+  max-width: 1050px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 40px 50px;
   gap: 60px;
 }
 .detail_policy .policy_title {
-  width: 1050px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -788,8 +836,8 @@ body {
   color: #000;
   margin-top: 30px;
 }
-.detail_policy .policy_title > p {
-  width: 906px;
+.detail_policy .policy_title .title_te {
+  width: 100%;
   font-size: 1.6rem;
   font-family: pretendard;
   font-weight: 400;
@@ -804,12 +852,12 @@ body {
   gap: 30px;
 }
 .detail_policy .policy_contents .policy_first, .detail_policy .policy_contents .policy_last {
-  width: 505px;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  gap: 15px;
+  gap: 20px;
 }
 .detail_policy .policy_contents .policy_first > h2, .detail_policy .policy_contents .policy_last > h2 {
   width: 100%;
@@ -823,16 +871,16 @@ body {
   font-family: pretendard;
   font-weight: 700;
   text-align: center;
-  color: #000;
+  color: #858585;
 }
 .detail_policy .policy_contents .policy_first p, .detail_policy .policy_contents .policy_last p {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   font-family: pretendard;
   font-weight: 300;
   line-height: 2.4rem;
   color: #000;
 }
-.detail_policy .policy_contents .policy_first strong, .detail_policy .policy_contents .policy_last strong {
+.detail_policy .policy_contents .policy_first p strong, .detail_policy .policy_contents .policy_last p strong {
   font-weight: 700;
 }
 .detail_policy .policy_contents .policy_first ul, .detail_policy .policy_contents .policy_last ul {
@@ -852,7 +900,7 @@ body {
   text-align: left;
 }
 .detail_policy .policy_contents .policy_last table tr td {
-  font-size: 1.4rem;
+  font-size: 1.38rem;
   font-family: pretendard;
   font-weight: 400;
   line-height: 3.3rem;
