--- a/detail/styles/detail.scss
+++ b/detail/styles/detail.scss
@@ -6,31 +6,49 @@
 @import "../../styles/header.scss";
 @import "../../styles/footer.scss";
 
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: map-get($map: $font, $key: pretendard);
+  width: 100%;
+  margin: 50px auto;
+}
+
 /* Product Thumbnail */
 @mixin product-thumb {
   width: 100%;
   .thumb_one {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin-bottom: 50px;
-    gap: 50px;
+    overflow: hidden;
+    padding-right: 20px;
+    img {
+      border-radius: 10px;
+      object-fit: cover;
+      width: 20%;
+    }
 
     & p {
       width: 50px;
       height: 50px;
       background: map-get($map: $color, $key: main-02);
-      border-radius: 9999px;
+      border-radius: 50%;
       color: map-get($map: $color, $key: light);
       font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 20px;
       text-align: center;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
+      padding: 8px 17px;
     }
 
     & h4 {
@@ -47,99 +65,85 @@
       line-height: 1.3rem;
       color: map-get($map: $color, $key: dark);
     }
-
-    & img {
-      width: 200px;
-      height: 200px;
-      border-radius: 20px;
-    }
   }
 }
 /* Review Content */
 @mixin member-content {
+  width: 50%;
   .member_content {
     margin: 20px auto;
     gap: 20px;
     display: flex;
-    font-size: 1.2rem;
-    & img {
+    font-size: 1.4rem;
+    overflow: hidden;
+    padding-right: 20px;
+    img {
       border-radius: 10px;
+      object-fit: cover;
+      width: 100%;
     }
     & > div {
       display: flex;
       flex-direction: column;
       p {
-        font-size: 1rem;
+        font-size: 1.2rem;
         color: map-get($map: $color, $key: gray-999);
-        margin: 20px 0px 0px;
+        margin: 30px 0px 0px;
       }
     }
   }
 }
 
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.6rem;
-  font-family: map-get($map: $font, $key: pretendard);
-}
-
 /* main */
 .detail_container {
   width: 100%;
-  height: 100%;
+  height: auto;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  flex-direction: column;
   align-items: center;
-  margin: 60px auto 100px auto;
 }
 
 /* hr */
 .detail_line {
-  width: 1050px;
-  height: 2px;
+  width: 100%;
+  max-width: 1050px;
+  height: 1px;
   background-color: map-get($map: $color, $key: main-01);
   border: none;
-  margin: 0 auto;
-}
-
-/* 5 Section */
-.detail_info,
-.detail_review,
-.detail_product,
-.detail_faq,
-.detail_policy {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 40px;
 }
 
 /* info */
 .detail_info {
   width: 100%;
-  height: 100%;
+  max-width: 1050px;
+  height: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding-bottom: 40px;
-  gap: 50px;
-  img {
-    border-radius: 10px;
+  padding: 40px 50px;
+  .info_img {
+    width: 100%;
+    max-width: 50%;
+    overflow: hidden;
+    img {
+      border-radius: 10px;
+      object-fit: cover;
+      width: 100%;
+    }
   }
   & .img_info {
+    width: 50%;
+    max-width: 50%;
+    padding-left: 20px;
     display: flex;
     flex-direction: column;
   }
   .info_title {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     & h1 {
       font-size: 3rem;
+      line-height: 140%;
     }
     & p {
       font-size: 2rem;
@@ -169,7 +173,7 @@ body {
     }
   }
   .info_review {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     & .fa-star {
       font-size: 2rem;
       background: linear-gradient(to right, #c1d95b, #ffd6b0);
@@ -234,17 +238,17 @@ body {
     }
   }
   .info_purchase {
-    margin-bottom: 10px;
+    width: 100%;
     button {
+      width: 100%;
       border: none;
       border-radius: 10px;
-      font-size: 2rem;
+      font-size: 1.8rem;
       font-weight: bold;
       color: map-get($map: $color, $key: light);
       background: map-get($map: $color, $key: main-02);
-      width: 440px;
-      height: 60px;
-      margin-top: 20px;
+      height: 40px;
+      margin-bottom: 10px;
       cursor: pointer;
     }
   }
@@ -252,30 +256,30 @@ body {
 
 /* review */
 .detail_review {
-  width: 1050px;
-  height: 100%;
-  margin: 0 auto;
+  max-width: 1050px;
+  height: auto;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 30px;
+  padding: 40px 50px;
+  gap: 50px;
+
   .review_text {
+    width: 100%;
     text-align: left;
     & .text_review {
       font-size: 3rem;
       font-weight: 700;
-      word-wrap: break-word;
     }
     & .text_few {
       color: map-get($map: $color, $key: main-01);
       font-size: 2rem;
       font-weight: 700;
-      word-wrap: break-word;
     }
   }
   .review_star {
-    width: 1050px;
-    height: 100%;
+    width: 100%;
+    height: auto;
     margin: 50px auto;
     padding: 20px;
     background: map-get($map: $color, $key: sub-03);
@@ -297,8 +301,8 @@ body {
     }
   }
   .review_member {
-    width: 1050px;
-    height: 100%;
+    width: 100%;
+    height: auto;
     margin: 40px auto;
     display: flex;
     justify-content: center;
@@ -327,7 +331,7 @@ body {
   }
   .review_more {
     width: 100%;
-    height: 60px;
+    height: 50px;
     border: 1px solid map-get($map: $color, $key: gray-858585);
     border-radius: 10px;
     display: inline-flex;
@@ -336,18 +340,31 @@ body {
     background: map-get($map: $color, $key: light);
     gap: 10px;
     padding: 20px;
-    margin-bottom: 80px;
-    font-size: 1.8rem;
+    margin-bottom: 10px;
+    font-size: 1.6rem;
     cursor: pointer;
   }
 }
 
 /* product */
 .detail_product {
-  width: 1050px;
-  margin: 0 auto;
+  max-width: 1050px;
+  height: auto;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 50px;
+  gap: 50px;
   .product_title {
+    width: 100%;
+    overflow: hidden;
+    padding-right: 20px;
+    img {
+      border-radius: 10px;
+      object-fit: cover;
+      width: 100%;
+    }
     margin-bottom: 80px;
     h1 {
       font-size: 3rem;
@@ -365,8 +382,11 @@ body {
         left: 0;
       }
     }
-    img {
-      border-radius: 30px;
+    & .img_group {
+      display: none;
+      img {
+        width: 22.3%;
+      }
     }
   }
   .product_thumb {
@@ -376,12 +396,13 @@ body {
 
 /* faq */
 .detail_faq {
-  width: 100%;
-  max-width: 1050px;
-  margin: 0 auto;
+  width: 1050px;
+  height: auto;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 40px 50px;
   gap: 20px;
 
   & .faq_title {
@@ -409,6 +430,7 @@ body {
 
   & .faq_subTitle {
     width: 100%;
+    font-size: 1.6rem;
     text-align: left;
     color: map-get($map: $color, $key: gray-999);
   }
@@ -427,7 +449,7 @@ body {
       width: 60%;
     }
     & .title_right {
-      width: 40%;
+      width: 60%;
       display: flex;
       justify-content: space-between;
     }
@@ -437,19 +459,17 @@ body {
     border-collapse: collapse;
     text-align: center;
     border-bottom: 1px solid map-get($map: $color, $key: main-01);
-    th {
+    .left {
       font-size: 2.2rem;
       font-weight: 600;
       color: map-get($map: $color, $key: main-01);
       padding: 20px 50px;
-      border-top: 2px solid map-get($map: $color, $key: main-01);
-      border-bottom: 1px solid map-get($map: $color, $key: main-01);
       &:first-child {
         margin-right: 40px;
       }
     }
 
-    td {
+    .left {
       font-size: 2rem;
       font-weight: 400;
       color: map-get($map: $color, $key: dark);
@@ -461,7 +481,7 @@ body {
         left: 145px;
         font-size: 1.3rem;
         width: 13px;
-        height: 16px;
+        height: auto;
         color: map-get($map: $color, $key: gray-858585);
       }
     }
@@ -471,8 +491,8 @@ body {
       cursor: pointer;
     }
     .right {
-      padding-left: 30px;
-      width: 170px;
+      padding-left: 50px;
+      width: 20%;
       font-weight: 500;
     }
     .faq_date {
@@ -492,7 +512,7 @@ body {
     div {
       font-size: 2.2rem;
       font-weight: 400;
-      color: black;
+      color: map-get($map: $color, $key: dark);
       cursor: pointer;
 
       &:first-child {
@@ -507,15 +527,17 @@ body {
 /* policy */
 .detail_policy {
   width: 100%;
+  max-width: 1050px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  // margin: 60px;
+  padding: 40px 50px;
   gap: 60px;
 
   .policy_title {
-    width: 1050px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -524,16 +546,16 @@ body {
 
     & > h1 {
       font-size: 3rem;
-      font-family: map-get($font, pretendard);
+      font-family: map-get($map: $font, $key: pretendard);
       font-weight: 700;
       color: map-get($color, dark);
       margin-top: 30px;
     }
 
-    & > p {
-      width: 906px;
+    & .title_te {
+      width: 100%;
       font-size: 1.6rem;
-      font-family: map-get($font, pretendard);
+      font-family: map-get($map: $font, $key: pretendard);
       font-weight: 400;
       line-height: 2.4rem;
       color: map-get($color, dark);
@@ -549,38 +571,38 @@ body {
 
     & .policy_first,
     & .policy_last {
-      width: 505px;
+      width: 50%;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
-      gap: 15px;
+      gap: 20px;
 
       & > h2 {
         width: 100%;
         height: 60px;
         border-radius: 10px;
-        border: 1px solid map-get($color, gray-858585);
+        border: 1px solid map-get($map: $color, $key: gray-858585);
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 1.8rem;
-        font-family: map-get($font, pretendard);
+        font-family: map-get($map: $font, $key: pretendard);
         font-weight: 700;
         text-align: center;
-        color: map-get($color, dark);
+        color: map-get($map: $color, $key: gray-858585);
       }
 
       p {
-        font-size: 1.4rem;
-        font-family: map-get($font, pretendard);
+        font-size: 1.6rem;
+        font-family: map-get($map: $font, $key: pretendard);
         font-weight: 300;
         line-height: 2.4rem;
-        color: map-get($color, dark);
-      }
+        color: map-get($map: $color, $key: dark);
 
-      strong {
-        font-weight: 700;
+        & strong {
+          font-weight: 700;
+        }
       }
 
       ul {
@@ -591,10 +613,10 @@ body {
         margin: 0px 0px 30px -18px;
         li {
           font-size: 1.4rem;
-          font-family: map-get($font, pretendard);
+          font-family: map-get($map: $font, $key: pretendard);
           font-weight: 300;
           line-height: 1rem;
-          color: map-get($color, dark);
+          color: map-get($map: $color, $key: dark);
           padding-left: 15px;
           text-align: left;
         }
@@ -604,7 +626,7 @@ body {
       table {
         tr {
           td {
-            font-size: 1.4rem;
+            font-size: 1.38rem;
             font-family: map-get($map: $font, $key: pretendard);
             font-weight: 400;
             line-height: 3.3rem;
