--- a/login/styles/login.scss
+++ b/login/styles/login.scss
@@ -55,7 +55,7 @@ body {
         .login_pw {
           display: flex;
           position: relative;
-          .fa-eye {
+          .fa-eye-slash {
             position: absolute;
             top: 50%;
             right: 20px;
@@ -70,7 +70,6 @@ body {
           padding: 10px 20px;
           font-family: map-get($map: $font, $key: pretendard);
           font-size: 1.8rem;
-          color: map-get($map: $color, $key: gray-999);
           border: 1px solid map-get($map: $color, $key: gray-999);
           &:focus {
             color: map-get($map: $color, $key: dark);
@@ -79,6 +78,9 @@ body {
               opacity: 0;
             }
           }
+        }
+        ::placeholder {
+          color: map-get($map: $color, $key: gray-ccc);
         }
       }
       button {
