--- a/styles/header.scss
+++ b/styles/header.scss
@@ -59,6 +59,9 @@ header {
             color: map-get($map: $color, $key: main-01);
           }
         }
+        .header_menu_trigger {
+          display: none;
+        }
       }
     }
     .header_inner_right {
@@ -121,7 +124,7 @@ header {
           .fa-cart-shopping {
             width: 40px;
             height: 34px;
-            font-size: 28px;
+            font-size: 2.8rem;
             cursor: pointer;
           }
           p {
@@ -138,7 +141,7 @@ header {
             top: -5px;
             right: -5px;
             font-family: map-get($map: $font, $key: pretendard);
-            font-size: 12px;
+            font-size: 1.2rem;
           }
         }
       }
