--- a/login/styles/mypage.scss
+++ b/login/styles/mypage.scss
@@ -64,6 +64,8 @@ body {
             font-family: map-get($map: $font, $key: pretendard);
             font-size: 2rem;
             font-weight: bold;
+            display: flex;
+            align-items: center;
           }
         }
         .mypage_detail {
@@ -77,7 +79,11 @@ body {
             height: 30px;
             display: flex;
             justify-content: space-between;
+            align-items: center;
             p {
+              display: flex;
+              justify-content: center;
+              align-items: center;
               font-family: map-get($map: $font, $key: pretendard);
               font-size: 2rem;
             }
@@ -95,6 +101,15 @@ body {
               font-size: 1.4rem;
               font-weight: bold;
               cursor: pointer;
+            }
+            div {
+              width: 80%;
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              i {
+                cursor: pointer;
+              }
             }
           }
         }
