--- a/detail/styles/detail.css
+++ b/detail/styles/detail.css
@@ -81,9 +81,9 @@ header .header_inner nav .gnb {
   top: 201px;
   left: 30px;
   width: 200px;
-  height: 250px;
+  height: 236px;
   padding: 30px;
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
+  box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
   transition: all 0.3s;
 }
 header .header_inner nav .gnb li > a {
@@ -143,6 +143,13 @@ header .header_inner .header_inner_left ul li {
   font-family: pretendard;
   font-size: 2.2rem;
   cursor: pointer;
+  transition: color 0.4s;
+}
+header .header_inner .header_inner_left ul li:hover {
+  color: #f37100;
+}
+header .header_inner .header_inner_left ul .header_menu_trigger {
+  display: none;
 }
 header .header_inner .header_inner_right {
   display: flex;
@@ -189,53 +196,28 @@ header .header_inner .header_inner_right .inner_right_bottom .search_bar input {
   opacity: 1;
   font-family: pretendard;
 }
-header
-  .header_inner
-  .header_inner_right
-  .inner_right_bottom
-  .search_bar
-  input:focus {
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus {
   outline: none;
 }
-header
-  .header_inner
-  .header_inner_right
-  .inner_right_bottom
-  .search_bar
-  input:focus::-moz-placeholder {
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::-moz-placeholder {
   -moz-transition: all 0.3s;
   transition: all 0.3s;
   opacity: 0;
 }
-header
-  .header_inner
-  .header_inner_right
-  .inner_right_bottom
-  .search_bar
-  input:focus::placeholder {
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::placeholder {
   transition: all 0.3s;
   opacity: 0;
 }
-header
-  .header_inner
-  .header_inner_right
-  .inner_right_bottom
-  .search_bar
-  .fa-magnifying-glass {
+header .header_inner .header_inner_right .inner_right_bottom .search_bar .fa-magnifying-glass {
   cursor: pointer;
 }
 header .header_inner .header_inner_right .inner_right_bottom .basket {
   position: relative;
 }
-header
-  .header_inner
-  .header_inner_right
-  .inner_right_bottom
-  .basket
-  .fa-cart-shopping {
+header .header_inner .header_inner_right .inner_right_bottom .basket .fa-cart-shopping {
   width: 40px;
-  height: 32px;
-  font-size: 32px;
+  height: 34px;
+  font-size: 2.8rem;
   cursor: pointer;
 }
 header .header_inner .header_inner_right .inner_right_bottom .basket p {
@@ -345,37 +327,19 @@ footer .footer_inner .footer_inner_right .inner_right_bottom {
   display: flex;
   gap: 10px;
 }
-footer
-  .footer_inner
-  .footer_inner_right
-  .inner_right_bottom
-  .right_bottom_left {
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-footer
-  .footer_inner
-  .footer_inner_right
-  .inner_right_bottom
-  .right_bottom_left
-  li:nth-child(1) {
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(1) {
   font-size: 1.4rem;
   font-weight: bold;
 }
-footer
-  .footer_inner
-  .footer_inner_right
-  .inner_right_bottom
-  .right_bottom_left
-  li:nth-child(2) {
-  font-size: 1.2rem;
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_left li:nth-child(2) {
+  font-size: 1rem;
 }
-footer
-  .footer_inner
-  .footer_inner_right
-  .inner_right_bottom
-  .right_bottom_right {
+footer .footer_inner .footer_inner_right .inner_right_bottom .right_bottom_right {
   font-size: 1.4rem;
   line-height: 150%;
 }
@@ -430,7 +394,7 @@ body {
 .detail_info .info_img img {
   border-radius: 10px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   width: 100%;
 }
 .detail_info .img_info {
@@ -626,7 +590,7 @@ body {
 .detail_review .review_member > div:first-child .member_content img {
   border-radius: 10px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   width: 100%;
 }
 .detail_review .review_member > div:first-child .member_content > div {
@@ -659,7 +623,7 @@ body {
 .detail_review .review_member > div:last-child .member_content img {
   border-radius: 10px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   width: 100%;
 }
 .detail_review .review_member > div:last-child .member_content > div {
@@ -707,7 +671,7 @@ body {
 .detail_product .product_title img {
   border-radius: 10px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   width: 100%;
 }
 .detail_product .product_title h1 {
@@ -748,7 +712,7 @@ body {
 .detail_product .product_thumb .thumb_one img {
   border-radius: 10px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   width: 20%;
 }
 .detail_product .product_thumb .thumb_one p {
@@ -872,7 +836,7 @@ body {
 }
 .detail_faq > .faq_table .left {
   -moz-text-align-last: left;
-  text-align-last: left;
+       text-align-last: left;
   padding-left: 20px;
   cursor: pointer;
 }
@@ -948,8 +912,7 @@ body {
   align-items: flex-start;
   gap: 30px;
 }
-.detail_policy .policy_contents .policy_first,
-.detail_policy .policy_contents .policy_last {
+.detail_policy .policy_contents .policy_first, .detail_policy .policy_contents .policy_last {
   width: 50%;
   display: flex;
   flex-direction: column;
@@ -957,8 +920,7 @@ body {
   align-items: flex-start;
   gap: 20px;
 }
-.detail_policy .policy_contents .policy_first > h2,
-.detail_policy .policy_contents .policy_last > h2 {
+.detail_policy .policy_contents .policy_first > h2, .detail_policy .policy_contents .policy_last > h2 {
   width: 100%;
   height: 60px;
   border-radius: 10px;
@@ -972,28 +934,24 @@ body {
   text-align: center;
   color: #858585;
 }
-.detail_policy .policy_contents .policy_first p,
-.detail_policy .policy_contents .policy_last p {
+.detail_policy .policy_contents .policy_first p, .detail_policy .policy_contents .policy_last p {
   font-size: 1.6rem;
   font-family: pretendard;
   font-weight: 300;
   line-height: 2.4rem;
   color: #000;
 }
-.detail_policy .policy_contents .policy_first p strong,
-.detail_policy .policy_contents .policy_last p strong {
+.detail_policy .policy_contents .policy_first p strong, .detail_policy .policy_contents .policy_last p strong {
   font-weight: 700;
 }
-.detail_policy .policy_contents .policy_first ul,
-.detail_policy .policy_contents .policy_last ul {
+.detail_policy .policy_contents .policy_first ul, .detail_policy .policy_contents .policy_last ul {
   display: flex;
   flex-direction: column;
   gap: 12px;
   line-height: 1rem;
   margin: 0px 0px 30px -18px;
 }
-.detail_policy .policy_contents .policy_first ul li,
-.detail_policy .policy_contents .policy_last ul li {
+.detail_policy .policy_contents .policy_first ul li, .detail_policy .policy_contents .policy_last ul li {
   font-size: 1.4rem;
   font-family: pretendard;
   font-weight: 300;
